themes/hyper/static/css/style.css
/* Base styling */

body {
    /*font: 18px/1.6 -apple-system, BlinkMacSystemFont, "Segoe UI", "Montserrat", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";*/
    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Montserrat", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
    color: #333;
    background-color: #fff;
    padding: 0px;
    margin: 0px;
    font-size: 1.2rem; /* Usually around 19pt */
    line-height: 1.6;
}

h1, h2, h3 {
    line-height: 1.2;
    color: #1f0537;
    font-family: "Bitter","Roboto Slab","Segoe UI","Libre Baskerville","Droid Sans","Ubuntu","Helvetica Neue",Helvetica,Arial,serif,"Segoe Chess","Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
}

a {
  text-decoration: underline #e0007d;
}
a:link {
  color: #810d6c;
}
a:visited {
  color: #150033;
}
a:hover {
  color: #e0007d;
  text-decoration: none !important;
}

nav a, header a {
  text-decoration: none;
}

li {
  margin-top: 0.6rem;
}

ul > li {
  list-style-type: circle;
}

/* Layout */

/* Original width was 760px, which was a compromise for large screens */
.container, #blog-header > .inner, nav.crumbs {
  margin: 0 auto;
  max-width: 40rem;
}

.container {
  padding: 0.3rem 0.5rem;
}

nav.crumbs {
  margin: 0 auto 0;
}

#blog-header {
  background-color: #1f0537;
  margin: 0;
  padding: 1.25rem;
}

.blog-name {
  color: #e0007d;
  display: inline;
}

#blog-logo-image {
  width: 496px;
  height: 73px;
}

article {
  margin-bottom: 10.0rem;
}

article p {
  text-align: justify;
}

section.post-content {
  margin-top: 2.5rem;
}

section.post-excerpt > p {
  margin-top: 1.5rem;
}


/* Content formatting */

/* TODO: Can I not just style h1 for this? */
h1.post-title, h1.sitemap-title {
  font-size: 2.0em;
  margin-bottom: 1.0rem;
}

.header-subtext {
  font-size: 0.6em;
  color: #555;
  font-weight: normal;
}

.header-subtext a {
  text-decoration: none;
}

div.post-meta {
  font-size: 0.9rem;
  color: #777;
}

.post-meta img {
  filter: opacity(30%);
  width: 1.0rem;
  height: 1.0rem;
}

.post-meta svg {
  color: #888;
  width: 1.0rem;
  height: 1.0rem;
}

.meta-value {
  margin-left: 1.0rem;
  vertical-align: top;
}

.post-content img {
  width: 100%;
  max-width: 100%;
  image-rendering: crisp-edges;
  image-rendering: pixelated;
}

code, pre, blockquote {
  font-family: monospace;
}

pre, blockquote {
  font-size: 0.8em;
}

code, blockquote {
  border: 1px solid #888;
  border-radius: 4px;
  background-color: #e0eaea;
}

code {
  padding: 1px 2px;
}

/* I think I am missing a dependency which has changed the way code blocks
are structured. Previously they did not use code tags, the formatting of which
this set of directives is overriding */
pre code {
  border: none;
  background-color: transparent;
}

blockquote {
  padding: 4px 8px;
  border: none;
  margin: 0px;
  text-align: left;
}

blockquote p {
  margin: 0.5rem;
  /*font-size: 1.5rem;*/
}

table {
  width: 100%;
}

th, td {
  padding: 0.2em 0.4em;
}

table {
  border: 1px solid #333;
  border-radius: 4px;
}

table thead {
  background-color: #810d6c;
  color: white;
}

/* Main navigation menu */

nav.collapsible-menu ul {
  list-style-type: none;
  padding: 0;
  position: relative;
  top: -1.0rem;
  margin: 0;
  text-decoration: none;
}

nav.collapsible-menu ul li {
  text-align: center;
  margin-top: 1.0rem;
  list-style-type: none;
}

nav.collapsible-menu ul li a:link {
  color: #e0007d;
  font-weight: bold;
}
nav.collapsible-menu ul li a:visited {
  color: #e0007d;
}
nav.collapsible-menu ul li a:hover {
  color: #e0007d;
  filter: brightness(120%);
  font-weight: bolder;
}
nav.collapsible-menu ul li.active {
  text-decoration: underline;
}

nav.collapsible-menu label {
  cursor: pointer;
  display: block;
  padding: 0;
  background: url(../images/icons/bars.svg) no-repeat right center;
  background-size: 25px 25px;
}

nav.collapsible-menu label:hover {
  color: #000;
}

nav.collapsible-menu #menu-toggle {
  display: none;
}

nav.collapsible-menu input:checked +label {
  background-image: url(../images/icons/times.svg);
}

nav.collapsible-menu .menu-content {
  max-height: 0;
  overflow: hidden;
}

nav.collapsible-menu  input:checked ~ .menu-content {
  max-height: 100%;
  overflow: visible;
}

span.social-icons {
  display: inline-block;
}

span.social-icons img {
  width: 1.2rem;
  height: 1.2rem;
}

span.social-icons svg {
  width: 1.2rem;
  height: 1.2rem;
}


/* Pagination */

nav.pagination {
  text-align: center;
}

.pagination-info {
  vertical-align: top;
}

.pagination-next, .pagination-prev {
  position: relative;
  top: 3px;
  filter: opacity(30%);
}

.pagination-next:hover, .pagination-prev:hover {
  filter: invert(14%) sepia(74%) saturate(7315%) hue-rotate(318deg) brightness(87%) contrast(105%);
}

nav.pagination svg {
  width: 1.2rem;
  height: 1.2rem;
}

/* Breadcrumbs */

.crumbs ol {
  list-style-type: none;
  display: inline-block;
  padding: 0.5rem;
  margin: 0;

  border: 1px solid #1f0537;
  border-radius: 4px;
  color: #fff;
  background-color: #1f0537;

  position: relative;
  top: -4px;
}

.crumbs ol li {
  margin: 0;
}

.crumbs ol li.divider {
  display: inline-block;
}

.crumbs ol li.divider::after {
  display: inline-block;
  color: #777;
  content: '/';
  font-size: 80%;
  font-weight: bold;
  padding: 0 0.3rem;
}

.crumbs ol li.crumb {
  display: inline-block;
  padding: 0 0.6rem;
}

.crumbs ol li.crumb a:link {
  color:#e0007d;
}

.crumbs ol li.crumb a:visited {
  color:#e0007d;
  filter: brightness(40%);
}

.crumbs ol li.crumb a:hover {
  color:#e0007d;
  filter: brightness(120%);
}

.tag::before {
  content: '#';
}


/* SVG icon in main content */

.body-icon, .spoiler-icon {
  width: 1.2rem;
  height: 1.2rem;
}

.quote-icon {
  width: 1.0rem;
  height: 1.0rem;
  margin-left: 0.5rem;
}


/* SVG icon in breadcrumb */

.breadcrumb-icon {
  width: 1.0rem;
  height: 1.0rem;
}

/* Icon for terminating articles */

.terminator svg {
  display: block;
  width: 1.5rem;
  height: 1.5rem;
  margin: 3.0rem auto 1.0rem auto;
}

/* Admonitions */

.admonition {
  /* Maybe not the best base border colour */
  border: 1px solid #e0007d;
  border-radius: 0.25rem;
}

.admonition > :not(.admonition-title):first-of-type, .admonition > .admonition-title + * {
    margin-top: 1rem;
}
.admonition > * {
    margin-left: 1rem;
    margin-right: 1rem;
}

.admonition > .admonition-title {
    margin: 0;
    padding: 0.75rem 1rem;
    background: rgba(0, 0, 0, 0.03);
        background-color: rgba(0, 0, 0, 0.03);
    border-bottom: 1px solid rgba(0, 0, 0, 0.125);
        border-bottom-color: rgba(0, 0, 0, 0.125);
    border-radius: calc(0.25rem - 1px) calc(0.25rem - 1px) 0 0;
    font-size: 1rem;
}

.admonition.warning > .admonition-title,
.admonition.spoiler > .admonition-title {
    background-color: #e0007d;
    color: white;
}

.admonition.warning, .admonition.warning > .admonition-title,
.admonition.spoiler, .admonition.spoiler > .admonition-title {
    border-color: #e0007d;
}

/* Spoiler warning icon alternative */

.spoiler-icon, .spoiler-text {
  color: #e0007d;
}

.spoiler-text {
  margin-left: 0.75rem;
  position: relative;
  top: -0.15rem;
}

/* Responsivity */

@media screen and (min-width: 1600px) {
  html {
    font-size: 105%;
  }
}

@media screen and (min-width: 1800px) {
  html {
    font-size: 110%;
  }
}

@media screen and (min-width: 2000px) {
  html {
    font-size: 120%;
  }
}


@media screen and (max-width: 600px) and (min-width: 450px) {
  #blog-logo-image {
    width: 336px;
    height: 49px;
  }

  .container, #blog-header > .inner, nav.crumbs {
    max-width: 40rem;
  }
}

@media screen and (max-width: 449px) and (min-width: 375px) {
  html {
    font-size: 90%;
  }

  #blog-logo-image {
    width: 260px;
    height: 38px;
  }

  .container, #blog-header > .inner, nav.crumbs {
    max-width: 40rem;
  }
}

@media screen and (max-width: 374px) {
  html {
    font-size: 80%;
  }

  #blog-logo-image {
    width: 240px;
    height: 35px;
  }

  .container, #blog-header > .inner, nav.crumbs {
    max-width: 40rem;
  }
}


/* Dark colour scheme */
@media (prefers-color-scheme: dark) {
  body {
    color:white;
    background:#1f0537;
  }
  a:link {
    color:#e0007d;
  }
  a:visited {
    color:#e0007d;
    filter: brightness(40%);
  }
  a:hover {
    color:#e0007d;
    filter: brightness(120%);
  }
  h1, h2, h3 {
    color: #e0007d;
  }
  div.post-meta {
    color: #bbb;
  }

  .post-meta img {
    filter: invert(14%) sepia(74%) saturate(7315%) hue-rotate(318deg) brightness(87%) contrast(105%);
  }

  .post-meta svg {
    color: #e0007d;
  }

  .pagination-next, .pagination-prev {
    filter: invert(14%) sepia(74%) saturate(7315%) hue-rotate(318deg) brightness(87%) contrast(105%);
  }

  .pagination-next:hover, .pagination-prev:hover {
    filter: invert(14%) sepia(74%) saturate(7315%) hue-rotate(318deg) brightness(100%) contrast(105%);
  }

  .header-subtext {
    color: #bbb;
  }

  .body-icon {
    color: #e0007d;
  }
}

html {
  display: block;
}

